--- a/tienda-muebles/blog.html
+++ b/tienda-muebles/blog.html
@@ -39,7 +39,7 @@
 
         <section class="contenedor-blog">
             <div class="blog">
-                <article  class="entrada">
+                <article class="entrada">
 
                     <h2>Guia de Colores</h2>
 
@@ -47,21 +47,27 @@
                     <div class="imagen">
                         <img src="img/nosotros.jpg" alt="imagen blog">
                     </div>
+                    <div class="contenido-blog">
+                        <div class="entrada-meta">
+                            <p>Fecha: <span>22 de Octubre de 2022</span></p>
+                            <p>Escrito por: <span>Tienda Muebles</span></p>
+                        </div>
+                        <div class="entrada-blog">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, maxime ea. Magni in
+                                corporis
+                                aspernatur incidunt? Dolorum incidunt quia magnam temporibus ducimus cupiditate amet
+                                quasi
+                                labore voluptatem. Magnam, doloribus quis.
+                            </p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero debitis doloremque
+                                repudiandae! In impedit a dolorum quisquam, itaque amet tenetur laboriosam mollitia
+                                corrupti
+                                odit quis neque nam nesciunt laborum alias.</p>
+                        </div>
+                        <a href="entrada.html" class="btn max-width-30">Leer</a>
+                    </div>
 
-                    <div class="entrada-meta">
-                        <p>Fecha: <span>22 de Octubre de 2022</span></p>
-                        <p>Escrito por: <span>Tienda Muebles</span></p>
-                    </div>
-                    <div class="entrada-blog">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, maxime ea. Magni in corporis
-                            aspernatur incidunt? Dolorum incidunt quia magnam temporibus ducimus cupiditate amet quasi
-                            labore voluptatem. Magnam, doloribus quis.
-                        </p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero debitis doloremque
-                            repudiandae! In impedit a dolorum quisquam, itaque amet tenetur laboriosam mollitia corrupti
-                            odit quis neque nam nesciunt laborum alias.</p>
-                    </div>
-                    <a href="entrada.html" class="btn max-width-30">Leer</a>
+
                 </article>
 
                 <article class="en">
@@ -73,20 +79,26 @@
                         <img src="img/nosotros.jpg" alt="imagen blog">
                     </div>
 
-                    <div class="entrada-meta">
-                        <p>Fecha: <span>22 de Octubre de 2022</span></p>
-                        <p>Escrito por: <span>Tienda Muebles</span></p>
+                    <div class="contenido-blog">
+                        <div class="entrada-meta">
+                            <p>Fecha: <span>22 de Octubre de 2022</span></p>
+                            <p>Escrito por: <span>Tienda Muebles</span></p>
+                        </div>
+                        <div class="entrada-blog">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, maxime ea. Magni in
+                                corporis
+                                aspernatur incidunt? Dolorum incidunt quia magnam temporibus ducimus cupiditate amet
+                                quasi
+                                labore voluptatem. Magnam, doloribus quis.
+                            </p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero debitis doloremque
+                                repudiandae! In impedit a dolorum quisquam, itaque amet tenetur laboriosam mollitia
+                                corrupti
+                                odit quis neque nam nesciunt laborum alias.</p>
+                        </div>
+                        <a href="entrada.html" class="btn max-width-30">Leer</a>
                     </div>
-                    <div class="entrada-blog">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, maxime ea. Magni in corporis
-                            aspernatur incidunt? Dolorum incidunt quia magnam temporibus ducimus cupiditate amet quasi
-                            labore voluptatem. Magnam, doloribus quis.
-                        </p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero debitis doloremque
-                            repudiandae! In impedit a dolorum quisquam, itaque amet tenetur laboriosam mollitia corrupti
-                            odit quis neque nam nesciunt laborum alias.</p>
-                    </div>
-                    <a href="entrada.html" class="btn max-width-30">Leer</a>
+
                 </article>
             </div>
 
