--- a/tienda-muebles/entrada.html
+++ b/tienda-muebles/entrada.html
@@ -45,27 +45,29 @@
             <div class="imagen">
                 <img src="img/nosotros.jpg" alt="imagen blog">
             </div>
-
-            <div class="entrada-meta">
-                <p>Fecha: <span>22 de Octubre de 2022</span></p>
-                <p>Escrito por: <span>Tienda Muebles</span></p>
+            <div class="contenido-blog">
+                <div class="entrada-meta">
+                    <p>Fecha: <span>22 de Octubre de 2022</span></p>
+                    <p>Escrito por: <span>Tienda Muebles</span></p>
+                </div>
+                <div class="entrada-blog">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, maxime ea. Magni in corporis
+                        aspernatur incidunt? Dolorum incidunt quia magnam temporibus ducimus cupiditate amet quasi
+                        labore voluptatem. Magnam, doloribus quis.
+                    </p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero debitis doloremque
+                        repudiandae! In impedit a dolorum quisquam, itaque amet tenetur laboriosam mollitia corrupti
+                        odit quis neque nam nesciunt laborum alias.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, maxime ea. Magni in corporis
+                        aspernatur incidunt? Dolorum incidunt quia magnam temporibus ducimus cupiditate amet quasi
+                        labore voluptatem. Magnam, doloribus quis.
+                    </p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero debitis doloremque
+                        repudiandae! In impedit a dolorum quisquam, itaque amet tenetur laboriosam mollitia corrupti
+                        odit quis neque nam nesciunt laborum alias.</p>
+                </div>
             </div>
-            <div class="entrada-blog">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, maxime ea. Magni in corporis
-                    aspernatur incidunt? Dolorum incidunt quia magnam temporibus ducimus cupiditate amet quasi
-                    labore voluptatem. Magnam, doloribus quis.
-                </p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero debitis doloremque
-                    repudiandae! In impedit a dolorum quisquam, itaque amet tenetur laboriosam mollitia corrupti
-                    odit quis neque nam nesciunt laborum alias.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, maxime ea. Magni in corporis
-                    aspernatur incidunt? Dolorum incidunt quia magnam temporibus ducimus cupiditate amet quasi
-                    labore voluptatem. Magnam, doloribus quis.
-                </p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero debitis doloremque
-                    repudiandae! In impedit a dolorum quisquam, itaque amet tenetur laboriosam mollitia corrupti
-                    odit quis neque nam nesciunt laborum alias.</p>
-            </div>
+            
 
         </article>
 
