--- a/Audifonos/index.html
+++ b/Audifonos/index.html
@@ -71,6 +71,51 @@
             </div>
         </div>
     </section>
+
+    <main class="contenedor modelos">
+        <h2 class="text-center degradado-verde  header-modelos">Elige tu TechPRO</h2>
+
+        <div class="listado-modelos">
+            <div class="modelo modelo-x">
+                <h3>TechPRO X</h3>
+                <p class="precio">$299</p>
+
+            </div>
+            <div class="modelo modelo-y">
+                <h3>TechPRO Y</h3>
+                <p class="precio">$399</p>
+            </div>
+
+            <div class="modelo modelo-z">
+                <h3>TechPRO Z</h3>
+                <p class="precio">$499</p>
+            </div>
+        </div>
+    </main>
+
+    <section class="newslatter">
+        <div class="contenido-newslletter contenedor">
+            <div class="texto-newslatter">
+                <h2>Recibe Actualizaciones</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, ipsam necessitatibus. Natus odio qui autem doloribus, placeat alias? Exercitationem possimus laudantium hic, distinctio alias beatae esse debitis ratione sapiente dolores!</p>
+
+                <form class="formulario">
+                    <div class="input">
+                        <input type="email" placeholder="Tu Email">
+                    </div>
+
+                    <input type="submit" value="Inscribirme">
+
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>Todos los Derechos Reservados</p>
+    </footer>
+
+    <script src="js/imagenes.js"></script>
 </body>
 
 </html>
