--- a/04 - nucleus-eWallet/index.html
+++ b/04 - nucleus-eWallet/index.html
@@ -141,6 +141,66 @@
             </div>
         </div>
     </section>
+    <section class="testimoniales">
+        <div class="testimoniales__contenedor">
+            <h2 class="testimoniales__heading">Testimoniales</h2>
+
+            <div class="testimoniales__grid">
+                <div class="testimonial">
+                    <p class="testimonial__texto">
+                        Exelente app, muy sensillo de manejar y enviar
+                    </p>
+                    <p class="testimonial__autor">- Francisco Sánchez</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">
+                        Exelente app, muy sensillo de manejar y enviar
+                    </p>
+                    <p class="testimonial__autor">- Francisco Sánchez</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">
+                        Exelente app, muy sensillo de manejar y enviar
+                    </p>
+                    <p class="testimonial__autor">- Francisco Sánchez</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">
+                        Exelente app, muy sensillo de manejar y enviar
+                    </p>
+                    <p class="testimonial__autor">- Francisco Sánchez</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">
+                        Exelente app, muy sensillo de manejar y enviar
+                    </p>
+                    <p class="testimonial__autor">- Francisco Sánchez</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">
+                        Exelente app, muy sensillo de manejar y enviar
+                    </p>
+                    <p class="testimonial__autor">- Francisco Sánchez</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer__contenedor">
+            <div class="footer__grid">
+                <div class="footer__logo">
+                    <img src="img/logo-blanco.svg" alt="logo">
+                </div>
+                <nav class="navegacion">
+                    <a class="navegacion__link navegacion__link--blanco" href="#">¿Qué es?</a>
+                    <a class="navegacion__link navegacion__link--blanco" href="#">¿Cómo funciona?</a>
+                    <a class="navegacion__link navegacion__link--blanco" href="#">Precio</a>
+                    <a class="navegacion__link navegacion__link--blanco" href="#">Contratar</a>
+                </nav>
+
+            </div>
+        </div>
+    </footer>
 
 </body>
 
