--- a/11- meeti/meeti.html
+++ b/11- meeti/meeti.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,49 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900|Staatliches" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
-<body>
 
+<body>
+    <header class="header contenedor">
+        <div class="header__logo">
+            <a href="index.html"><img src="build/img/logo.png" alt="logo meeti"></a>
+        </div>
+        <nav class="navegacion">
+            <a href="#" class="navegacion__enlace navegacion__enlace--crear">Crear Grupo</a>
+            <a href="#" class="navegacion__enlace">Iniciar Sesion</a>
+            <a href="#" class="navegacion__enlace">Registrarse</a>
+        </nav>
+    </header>
+   
+    <div class="meeti contenedor">
+        <h2 class="meeti__nombre">Headless WordPress con Next.js</h2>
+        <div class="meeti__grid">
+        <div class="meeti__informacion">
+        <img src="build/img/meeti.jpg" alt="Imagen meeti" class="meeti__imagen">
+        <p class="meeti__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea totam fugit repellendus est minima? Facilis eum sequi quaerat enim debitis quidem cupiditate, minus similique commodi officiis eveniet distinctio eligendi. Vitae</p>
+        <p class="meeti__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea totam fugit repellendus est minima? Facilis eum sequi quaerat enim debitis quidem cupiditate, minus similique commodi officiis eveniet distinctio eligendi. Vitae</p>
+    </div>
+    <aside class="sidebar ">
+        <img src="build/img/mapa.jpg" alt="Imagen mapa" class="sidebar__mapa">
+        <div class="sidebar__contenido">
+            <h3 class="sidebar__heading">Información Meeti</h3>
+            <p class="sidebar__texto"><span>Fecha:</span> 30 de Diciembre de 2022 </p>
+            <p class="sidebar__texto"><span>Hora:</span> 20:30</p>
+            <p class="sidebar__texto"><span>Ubicación:</span> Av. Vallarta 3033 </p>
+
+        </div>
+    </aside>
+</div>
+    
+    <footer class="footer contenedor">
+        <div class="footer__navegacion">
+            <nav class="navegacion">
+                <a href="#" class="navegacion__enlace navegacion__enlace--crear">Crear Grupo</a>
+                <a href="#" class="navegacion__enlace">Iniciar Sesion</a>
+                <a href="#" class="navegacion__enlace">Registrarse</a>
+            </nav>
+        </div>
+        <p class="footer__copy">Todos los derechos reservados. Meeti</p>
+    </footer>
 </body>
+
 </html>
