--- a/11- meeti/index.html
+++ b/11- meeti/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,201 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900|Staatliches" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
-<body>
 
-    
+<body>
+    <header class="header contenedor">
+        <div class="header__logo">
+            <a href="index.html"><img src="build/img/logo.png" alt="logo meeti"></a>
+        </div>
+        <nav class="navegacion">
+            <a href="#" class="navegacion__enlace navegacion__enlace--crear">Crear Grupo</a>
+            <a href="#" class="navegacion__enlace">Iniciar Sesion</a>
+            <a href="#" class="navegacion__enlace">Registrarse</a>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h1 class="hero__texto">Encuentra o crea un grupo para compartir lo que más te gusta</h1>
+        <a href="#" class="hero__enlace">Registrarse</a>
+    </section>
+
+    <section class="busqueda">
+        <h2 class="busqueda__heading">Busca un grupo en tu ciudad</h2>
+        <div class="contenedor">
+            <form class="formulario">
+                <select class="formulario__campo">
+                    <option>Programación</option>
+                    <option>Diseño</option>
+                    <option>Negocios</option>
+                    <option>Moda</option>
+                    <option>Ejecicio y Salud</option>
+                    <option>Fotografía</option>
+                    <option>Comida</option>
+                    <option>Diseño Interior</option>
+                    <option>Café</option>
+                    <option>Cine</option>
+                    <option>Libros</option>
+                    <option>Enprendimiento</option>
+                </select>
+
+                <input class="formulario__campo" type="text" placeholder="Nombre Evento">
+
+                <input class="formulario__campo" type="text" placeholder="Ciudad o País">
+
+                <input class="formulario__submit" type="submit" value="Buscar">
+            </form>
+        </div>
+    </section>
+
+    <main class="eventos contenedor">
+        <h2 class="eventos__heading">Proximos Eventos</h2>
+
+        <div class="eventos__grid">
+            <div class="evento">
+                <a href="meeti.html"><img src="build/img/imagen1.jpg" alt="Imagen meeti" class="evento__imagen">
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Jueves 30 de Septiembre de 2022</p>
+
+                        <h3 class="evento__nombre">Ideas de Negocios</h3>
+
+                        <div class="evento__autor">
+                            <div class="evento__autor-imagen">
+                                <img src="build/img/perfil1.jpg" alt="imagen perfil">
+                            </div>
+
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organzado por:</p>
+                                <p class="evento__organizado-texto">Fancisco Sánchez</p>
+                            </div>
+                        </div>
+                    </div><!--Evento Contenido-->
+                </a>
+            </div>
+            <!--Evento-->
+
+            <div class="evento">
+                <a href="meeti.html"><img src="build/img/imagen2.jpg" alt="Imagen meeti" class="evento__imagen">
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Lunes 02 de Octubre de 2022</p>
+
+                        <h3 class="evento__nombre">Bitcoin y otras Criptos</h3>
+
+                        <div class="evento__autor">
+                            <div class="evento__autor-imagen">
+                                <img src="build/img/perfil1.jpg" alt="imagen perfil">
+                            </div>
+
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organzado por:</p>
+                                <p class="evento__organizado-texto">Fancisco Sánchez</p>
+                            </div>
+                        </div>
+                    </div><!--Evento Contenido-->
+                </a>
+            </div>
+            <!--Evento-->
+
+            <div class="evento">
+                <a href="meeti.html"><img src="build/img/imagen3.jpg" alt="Imagen meeti" class="evento__imagen">
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Miércoles 04 de Octubre de 2022</p>
+
+                        <h3 class="evento__nombre">Pizza paso a paso</h3>
+
+                        <div class="evento__autor">
+                            <div class="evento__autor-imagen">
+                                <img src="build/img/perfil2.jpg" alt="imagen perfil">
+                            </div>
+
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organzado por:</p>
+                                <p class="evento__organizado-texto">Josue Perez</p>
+                            </div>
+                        </div>
+                    </div><!--Evento Contenido-->
+                </a>
+            </div>
+            <!--Evento-->
+        </div>
+    </main>
+
+    <section class="categorias contenedor">
+        <h2 class="categorias__heading">Categorías</h2>
+        <div class="categorias__grid">
+            <div class="categoria">
+                    <img categoria__imagen src="build/img/categoria_1.jpg" alt="Imagen categoria">
+                    <p class="categoria__nombre">Programación</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_2.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Diseño UX y UI</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_3.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Negocios e Ideas</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_4.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Ropa y Moda</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_5.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Ejercicio y Bienestar</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_6.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Fotografía</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_7.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Comida</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_8.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Diseño Interior</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_9.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Café</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_10.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Cine</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_11.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Libros</p>
+            </div>
+            <div class="categoria">
+                <img categoria__imagen src="build/img/categoria_12.jpg" alt="Imagen categoria">
+                <p class="categoria__nombre">Emprendimiento</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="grupos">
+        <div class="grupos__grid contenedor">
+            <div class="grupos__bloque">
+                <h3 class="grupos__heading">Crea un grupo</h3>
+                <p class="grupos__texto">Comparte lo que te gusta o tu pasión con los demás, crea tu propio grupo y eventos; hoy mismo sin costos</p>
+            </div>
+            <div class="grupos__bloque">
+                <h3 class="grupos__heading">Crea un grupo</h3>
+                <p class="grupos__texto">Comparte lo que te gusta o tu pasión con los demás, crea tu propio grupo y eventos; hoy mismo sin costos</p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer contenedor">
+        <div class="footer__navegacion">
+            <nav class="navegacion">
+                <a href="#" class="navegacion__enlace navegacion__enlace--crear">Crear Grupo</a>
+                <a href="#" class="navegacion__enlace">Iniciar Sesion</a>
+                <a href="#" class="navegacion__enlace">Registrarse</a>
+            </nav>
+        </div>
+        <p class="footer__copy">Todos los derechos reservados. Meeti</p>
+    </footer>
 </body>
+
 </html>
